[package]
name = "weather-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.2.1", features = ["derive"] }
regex = "1.7.3"
reqwest = { version = "0.11.16", features = ["json", "blocking"] }
serde = "1.0.159"
serde_derive = "1.0.159"
serde_json = "1.0.95"
tokio = { version = "1.27.0", features = ["full"] }
